--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 error-chain = "0.12.4"
-awc = { version = "3.0.1", features = ["rustls"]}
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0.152", features = ["derive"] }
 dotenv = "0.15.0"
-actix-web = "4.2.1"
+tokio = { version = "1", features = ["full"] }
