--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0.152", features = ["derive"] }
 dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = "*"
